api--file-sys-cli/GenerateParser/.antlr/FileSysCLIParser.java
// Generated from /home/ralda/Estudios/lab_archivos/proyecto_1/MIA_P1_202103216/GenerateParser/FileSysCLI.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FileSysCLIParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, ENBLANCO=29, LINE_COMMENT=30, 
		STRING=31, QUOTED_TEXT_=32;
	public static final int
		RULE_commands = 0, RULE_command = 1, RULE_execute = 2, RULE_mkdisk = 3, 
		RULE_rmdisk = 4, RULE_fdisk = 5, RULE_mount = 6, RULE_unmount = 7, RULE_mkfs = 8, 
		RULE_login = 9, RULE_logout = 10, RULE_mkgrp = 11, RULE_rmgrp = 12, RULE_mkusr = 13, 
		RULE_rmusr = 14, RULE_mkfile = 15, RULE_rep = 16, RULE_cat = 17, RULE_remove = 18, 
		RULE_edit = 19, RULE_rename = 20, RULE_mkdir = 21, RULE_pause = 22, RULE_chgrp = 23, 
		RULE_move = 24, RULE_loss = 25, RULE_recovery = 26, RULE_chown = 27, RULE_chmod = 28, 
		RULE_parametro = 29, RULE_value_parametro = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"commands", "command", "execute", "mkdisk", "rmdisk", "fdisk", "mount", 
			"unmount", "mkfs", "login", "logout", "mkgrp", "rmgrp", "mkusr", "rmusr", 
			"mkfile", "rep", "cat", "remove", "edit", "rename", "mkdir", "pause", 
			"chgrp", "move", "loss", "recovery", "chown", "chmod", "parametro", "value_parametro"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'execute'", "'mkdisk'", "'rmdisk'", "'fdisk'", "'mount'", "'unmount'", 
			"'mkfs'", "'login'", "'logout'", "'mkgrp'", "'rmgrp'", "'mkusr'", "'rmusr'", 
			"'mkfile'", "'rep'", "'cat'", "'remove'", "'edit'", "'rename'", "'mkdir'", 
			"'pause'", "'chgrp'", "'move'", "'loss'", "'recovery'", "'chown'", "'chmod'", 
			"'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "ENBLANCO", "LINE_COMMENT", "STRING", "QUOTED_TEXT_"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FileSysCLI.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FileSysCLIParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandsContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FileSysCLIParser.EOF, 0); }
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public CommandsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commands; }
	}

	public final CommandsContext commands() throws RecognitionException {
		CommandsContext _localctx = new CommandsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_commands);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 268435454L) != 0)) {
				{
				{
				setState(62);
				command();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandContext extends ParserRuleContext {
		public MkdiskContext mkdisk() {
			return getRuleContext(MkdiskContext.class,0);
		}
		public RmdiskContext rmdisk() {
			return getRuleContext(RmdiskContext.class,0);
		}
		public FdiskContext fdisk() {
			return getRuleContext(FdiskContext.class,0);
		}
		public ExecuteContext execute() {
			return getRuleContext(ExecuteContext.class,0);
		}
		public MountContext mount() {
			return getRuleContext(MountContext.class,0);
		}
		public UnmountContext unmount() {
			return getRuleContext(UnmountContext.class,0);
		}
		public MkfsContext mkfs() {
			return getRuleContext(MkfsContext.class,0);
		}
		public LoginContext login() {
			return getRuleContext(LoginContext.class,0);
		}
		public LogoutContext logout() {
			return getRuleContext(LogoutContext.class,0);
		}
		public MkgrpContext mkgrp() {
			return getRuleContext(MkgrpContext.class,0);
		}
		public RmgrpContext rmgrp() {
			return getRuleContext(RmgrpContext.class,0);
		}
		public MkusrContext mkusr() {
			return getRuleContext(MkusrContext.class,0);
		}
		public RmusrContext rmusr() {
			return getRuleContext(RmusrContext.class,0);
		}
		public MkfileContext mkfile() {
			return getRuleContext(MkfileContext.class,0);
		}
		public CatContext cat() {
			return getRuleContext(CatContext.class,0);
		}
		public RemoveContext remove() {
			return getRuleContext(RemoveContext.class,0);
		}
		public EditContext edit() {
			return getRuleContext(EditContext.class,0);
		}
		public RenameContext rename() {
			return getRuleContext(RenameContext.class,0);
		}
		public MkdirContext mkdir() {
			return getRuleContext(MkdirContext.class,0);
		}
		public ChgrpContext chgrp() {
			return getRuleContext(ChgrpContext.class,0);
		}
		public RepContext rep() {
			return getRuleContext(RepContext.class,0);
		}
		public MoveContext move() {
			return getRuleContext(MoveContext.class,0);
		}
		public LossContext loss() {
			return getRuleContext(LossContext.class,0);
		}
		public RecoveryContext recovery() {
			return getRuleContext(RecoveryContext.class,0);
		}
		public ChownContext chown() {
			return getRuleContext(ChownContext.class,0);
		}
		public ChmodContext chmod() {
			return getRuleContext(ChmodContext.class,0);
		}
		public PauseContext pause() {
			return getRuleContext(PauseContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_command);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				mkdisk();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				rmdisk();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				fdisk();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				execute();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 5);
				{
				setState(74);
				mount();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 6);
				{
				setState(75);
				unmount();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 7);
				{
				setState(76);
				mkfs();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 8);
				{
				setState(77);
				login();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 9);
				{
				setState(78);
				logout();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 10);
				{
				setState(79);
				mkgrp();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 11);
				{
				setState(80);
				rmgrp();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 12);
				{
				setState(81);
				mkusr();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 13);
				{
				setState(82);
				rmusr();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 14);
				{
				setState(83);
				mkfile();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 15);
				{
				setState(84);
				cat();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 16);
				{
				setState(85);
				remove();
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 17);
				{
				setState(86);
				edit();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 18);
				{
				setState(87);
				rename();
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 19);
				{
				setState(88);
				mkdir();
				}
				break;
			case T__21:
				enterOuterAlt(_localctx, 20);
				{
				setState(89);
				chgrp();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 21);
				{
				setState(90);
				rep();
				}
				break;
			case T__22:
				enterOuterAlt(_localctx, 22);
				{
				setState(91);
				move();
				}
				break;
			case T__23:
				enterOuterAlt(_localctx, 23);
				{
				setState(92);
				loss();
				}
				break;
			case T__24:
				enterOuterAlt(_localctx, 24);
				{
				setState(93);
				recovery();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 25);
				{
				setState(94);
				chown();
				}
				break;
			case T__26:
				enterOuterAlt(_localctx, 26);
				{
				setState(95);
				chmod();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 27);
				{
				setState(96);
				pause();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExecuteContext extends ParserRuleContext {
		public ExecuteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_execute; }
	 
		public ExecuteContext() { }
		public void copyFrom(ExecuteContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Command_executeContext extends ExecuteContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public Command_executeContext(ExecuteContext ctx) { copyFrom(ctx); }
	}

	public final ExecuteContext execute() throws RecognitionException {
		ExecuteContext _localctx = new ExecuteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_execute);
		int _la;
		try {
			_localctx = new Command_executeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(T__0);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==QUOTED_TEXT_) {
				{
				{
				setState(100);
				parametro();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MkdiskContext extends ParserRuleContext {
		public MkdiskContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mkdisk; }
	 
		public MkdiskContext() { }
		public void copyFrom(MkdiskContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Command_mkdiskContext extends MkdiskContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public Command_mkdiskContext(MkdiskContext ctx) { copyFrom(ctx); }
	}

	public final MkdiskContext mkdisk() throws RecognitionException {
		MkdiskContext _localctx = new MkdiskContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mkdisk);
		int _la;
		try {
			_localctx = new Command_mkdiskContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__1);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==QUOTED_TEXT_) {
				{
				{
				setState(107);
				parametro();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RmdiskContext extends ParserRuleContext {
		public RmdiskContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rmdisk; }
	 
		public RmdiskContext() { }
		public void copyFrom(RmdiskContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Command_rmdiskContext extends RmdiskContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public Command_rmdiskContext(RmdiskContext ctx) { copyFrom(ctx); }
	}

	public final RmdiskContext rmdisk() throws RecognitionException {
		RmdiskContext _localctx = new RmdiskContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rmdisk);
		int _la;
		try {
			_localctx = new Command_rmdiskContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(T__2);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==QUOTED_TEXT_) {
				{
				{
				setState(114);
				parametro();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FdiskContext extends ParserRuleContext {
		public FdiskContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fdisk; }
	 
		public FdiskContext() { }
		public void copyFrom(FdiskContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Command_fdiskContext extends FdiskContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public Command_fdiskContext(FdiskContext ctx) { copyFrom(ctx); }
	}

	public final FdiskContext fdisk() throws RecognitionException {
		FdiskContext _localctx = new FdiskContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fdisk);
		int _la;
		try {
			_localctx = new Command_fdiskContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__3);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==QUOTED_TEXT_) {
				{
				{
				setState(121);
				parametro();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MountContext extends ParserRuleContext {
		public MountContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mount; }
	 
		public MountContext() { }
		public void copyFrom(MountContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Command_mountContext extends MountContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public Command_mountContext(MountContext ctx) { copyFrom(ctx); }
	}

	public final MountContext mount() throws RecognitionException {
		MountContext _localctx = new MountContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mount);
		int _la;
		try {
			_localctx = new Command_mountContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__4);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==QUOTED_TEXT_) {
				{
				{
				setState(128);
				parametro();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnmountContext extends ParserRuleContext {
		public UnmountContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unmount; }
	 
		public UnmountContext() { }
		public void copyFrom(UnmountContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Command_unmountContext extends UnmountContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public Command_unmountContext(UnmountContext ctx) { copyFrom(ctx); }
	}

	public final UnmountContext unmount() throws RecognitionException {
		UnmountContext _localctx = new UnmountContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_unmount);
		int _la;
		try {
			_localctx = new Command_unmountContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(T__5);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==QUOTED_TEXT_) {
				{
				{
				setState(135);
				parametro();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MkfsContext extends ParserRuleContext {
		public MkfsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mkfs; }
	 
		public MkfsContext() { }
		public void copyFrom(MkfsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Command_mkfsContext extends MkfsContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public Command_mkfsContext(MkfsContext ctx) { copyFrom(ctx); }
	}

	public final MkfsContext mkfs() throws RecognitionException {
		MkfsContext _localctx = new MkfsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mkfs);
		int _la;
		try {
			_localctx = new Command_mkfsContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__6);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==QUOTED_TEXT_) {
				{
				{
				setState(142);
				parametro();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoginContext extends ParserRuleContext {
		public LoginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_login; }
	 
		public LoginContext() { }
		public void copyFrom(LoginContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Command_loginContext extends LoginContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public Command_loginContext(LoginContext ctx) { copyFrom(ctx); }
	}

	public final LoginContext login() throws RecognitionException {
		LoginContext _localctx = new LoginContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_login);
		int _la;
		try {
			_localctx = new Command_loginContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(T__7);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==QUOTED_TEXT_) {
				{
				{
				setState(149);
				parametro();
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogoutContext extends ParserRuleContext {
		public LogoutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logout; }
	 
		public LogoutContext() { }
		public void copyFrom(LogoutContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Command_logoutContext extends LogoutContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public Command_logoutContext(LogoutContext ctx) { copyFrom(ctx); }
	}

	public final LogoutContext logout() throws RecognitionException {
		LogoutContext _localctx = new LogoutContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_logout);
		int _la;
		try {
			_localctx = new Command_logoutContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(T__8);
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==QUOTED_TEXT_) {
				{
				{
				setState(156);
				parametro();
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MkgrpContext extends ParserRuleContext {
		public MkgrpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mkgrp; }
	 
		public MkgrpContext() { }
		public void copyFrom(MkgrpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Command_mkgrpContext extends MkgrpContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public Command_mkgrpContext(MkgrpContext ctx) { copyFrom(ctx); }
	}

	public final MkgrpContext mkgrp() throws RecognitionException {
		MkgrpContext _localctx = new MkgrpContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_mkgrp);
		int _la;
		try {
			_localctx = new Command_mkgrpContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(T__9);
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==QUOTED_TEXT_) {
				{
				{
				setState(163);
				parametro();
				}
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RmgrpContext extends ParserRuleContext {
		public RmgrpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rmgrp; }
	 
		public RmgrpContext() { }
		public void copyFrom(RmgrpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Command_rmgrpContext extends RmgrpContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public Command_rmgrpContext(RmgrpContext ctx) { copyFrom(ctx); }
	}

	public final RmgrpContext rmgrp() throws RecognitionException {
		RmgrpContext _localctx = new RmgrpContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_rmgrp);
		int _la;
		try {
			_localctx = new Command_rmgrpContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(T__10);
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==QUOTED_TEXT_) {
				{
				{
				setState(170);
				parametro();
				}
				}
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MkusrContext extends ParserRuleContext {
		public MkusrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mkusr; }
	 
		public MkusrContext() { }
		public void copyFrom(MkusrContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Command_mkusrContext extends MkusrContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public Command_mkusrContext(MkusrContext ctx) { copyFrom(ctx); }
	}
